# dpc

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
doc/: dpc.typ
dpc/: core.py  entry_points.py  main.py
