[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dpc"
dynamic = ["version"]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "qpsolvers[osqp]",
    # "casadi>=3.6.7", # until 3.6.7 is realeased, install nightly wheels from https://github.com/casadi/casadi/releases/tag/nightly-main
    "icecream",
    "tqdm",
    "torch",
    "lightning",
    "strongpods@git+https://github.com/tudoroancea/strongpods.git@v2.0.0",
]

[project.scripts]
dpc = "dpc.main:main"

[project.optional-dependencies]
dev = ["ruff"]
linux = ["PyQt5"]

[tool.setuptools]
packages = ["dpc"]

[tool.pyright]
typeCheckingMode = "off"
venv = ".venv"
venvPath = "."

