[project]
name = "dpc"
version = "0.1.0"
description = "making Differentiable Predictive Control work on cars"
readme = "README.md"
requires-python = "~=3.12"
authors = [{ name = "Tudor Oancea", email = "oancea.tudor@icloud.com" }]
dependencies = [
    # misc utilities
    "strongpods>=2.1.0",
    "icecream>=2.1.3",
    "tqdm>=4.66.5",
    # basic numerical packages
    "numpy>=2.0.0",
    "scipy>=1.14.1",
    # optimization
    "qpsolvers[osqp]>=4.3.3",
    "casadi @ https://github.com/casadi/casadi/releases/download/nightly-main/casadi-3.6.6.dev+main-cp312-none-manylinux2014_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "casadi @ https://github.com/casadi/casadi/releases/download/nightly-main/casadi-3.6.6.dev+main-cp312-none-macosx_11_0_arm64.whl ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "casadi @ https://github.com/casadi/casadi/releases/download/nightly-main/casadi-3.6.6.dev+main-cp312-none-manylinux2014_aarch64.whl ; sys_platform == 'linux' and platform_machine == 'aarch64'",
    # "casadi>=3.6.7", # until 3.6.7 is realeased, install nightly wheels from https://github.com/casadi/casadi/releases/tag/nightly-main
    # deep learning
    "torch>=2.4.0",
    "lightning>=2.4.0",
    # visualization
    "matplotlib>=3.9.2",
    "pyqt5>=5.15; sys_platform == 'linux'",
]

[project.scripts]
plot_track = "dpc.entry_points:plot_track"
closed_loop_nmpc = "dpc.entry_points:closed_loop_nmpc"
create_dpc_dataset = "dpc.entry_points:create_dpc_dataset"
train_dpc = "dpc.entry_points:train_dpc"
open_loop_dpc = "dpc.entry_points:open_loop_dpc"
closed_loop_dpc = "dpc.entry_points:closed_loop_dpc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "off"
venv = ".venv"
venvPath = "."

[tool.hatch.metadata]
allow-direct-references = true # to allow the syntax 'pkg @ url' in dependencies
